--- a/index.html
+++ b/index.html
@@ -1,145 +1,399 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hafidh Mwita | Full-Stack Developer</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hafidh Mwita | Full-Stack Developer</title>
 
-  <!-- Font Awesome Icons -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-  />
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <!-- Font Awesome Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <!-- Google Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- Navigation -->
+    <nav class="navbar">
+      <div class="nav-container">
+        <div class="logo">
+          <i class="fas fa-code"></i>
+          <span>Hafidh</span>
+        </div>
+        <ul class="nav-menu">
+          <li><a href="#about" class="nav-link">About</a></li>
+          <li><a href="#skills" class="nav-link">Skills</a></li>
+          <li><a href="#projects" class="nav-link">Projects</a></li>
+          <li><a href="#contact" class="nav-link">Contact</a></li>
+        </ul>
+        <div class="theme-toggle">
+          <button id="themeToggle" class="toggle-btn" title="Toggle Theme">
+            <i class="fas fa-moon"></i>
+          </button>
+        </div>
+      </div>
+    </nav>
 
-  <!-- Navbar -->
-  <nav>
-    <div class="logo">
-      <img src="logo.png" alt="Hafidh Logo">
-      <span>Hafidh</span>
-    </div>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+    <!-- Hero Section -->
+    <section class="hero" id="hero">
+      <div class="hero-container">
+        <div class="hero-content">
+          <div class="hero-text">
+            <h1 class="hero-title">
+              Hi, I'm <span class="text-accent">Hafidh Mwita Haji</span>
+            </h1>
+            <p class="hero-subtitle">Full-Stack Developer & IT Student</p>
+            <p class="hero-description">
+              I specialize in building
+              <strong>scalable backend systems</strong>, modern
+              <strong>web applications</strong>, and robust
+              <strong>APIs</strong> using Python, Node.js, and React. Passionate
+              about solving real-world problems through elegant code.
+            </p>
+            <div class="hero-buttons">
+              <a href="#projects" class="btn btn-primary">
+                <i class="fas fa-briefcase"></i> View My Work
+              </a>
+              <a href="#contact" class="btn btn-outline">
+                <i class="fas fa-paper-plane"></i> Get In Touch
+              </a>
+            </div>
+            <div class="social-links">
+              <a
+                href="https://github.com/hafidh-099"
+                target="_blank"
+                class="social-icon"
+                title="GitHub"
+              >
+                <i class="fab fa-github"></i>
+              </a>
+              <a
+                href="mailto:hafidhmwita30@gmail.com"
+                class="social-icon"
+                title="Email"
+              >
+                <i class="fas fa-envelope"></i>
+              </a>
+              <a href="#" class="social-icon" title="LinkedIn">
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <a href="#" class="social-icon" title="Twitter">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </div>
+          </div>
+          <div class="hero-image">
+            <div class="image-wrapper">
+              <img src="profile.jpg" alt="Hafidh Mwita" class="profile-image" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="scroll-indicator">
+        <span>Scroll to explore</span>
+        <i class="fas fa-chevron-down"></i>
+      </div>
+    </section>
 
-  <!-- Hero -->
-  <section class="hero">
-    <h1>Hi, I'm <span>Hafidh Mwita Haji</span></h1>
-    <h2>Full-Stack Developer & IT Student</h2>
-    <p>
-      I specialize in backend development using <strong>Python</strong> and
-      <strong>Node.js</strong>, building scalable and modern web applications.
-    </p>
-	
-    <div class="hero-buttons">
-      <a href="#projects" class="btn primary">View Projects</a>
-      <a href="#contact" class="btn outline">Contact Me</a>
-    </div>
-  </section>
+    <!-- About Section -->
+    <section class="about" id="about">
+      <div class="container">
+        <h2 class="section-title">
+          <i class="fas fa-user-circle"></i> About Me
+        </h2>
+        <div class="about-content">
+          <div class="about-text">
+            <p>
+              I'm an intermediate Full-Stack Developer and IT with Management
+              student at the
+              <strong>State University of Zanzibar (SUZA)</strong>. I'm
+              passionate about creating efficient, scalable solutions that make
+              an impact.
+            </p>
+            <p>
+              With expertise in
+              <strong>Python, JavaScript, and modern web frameworks</strong>,
+              I've developed multiple full-stack applications from concept to
+              deployment. I love working on challenging projects that push the
+              boundaries of what's possible.
+            </p>
+            <p>
+              When I'm not coding, you'll find me exploring new technologies,
+              contributing to open-source projects, or learning about emerging
+              trends in software development.
+            </p>
+            <div class="about-stats">
+              <div class="stat">
+                <h3>10+</h3>
+                <p>Projects Built</p>
+              </div>
+              <div class="stat">
+                <h3>5+</h3>
+                <p>Years Experience</p>
+              </div>
+              <div class="stat">
+                <h3>100%</h3>
+                <p>Dedication</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  <!-- About -->
-  <section id="about">
-    <h2 class="section-title"><i class="fas fa-user"></i> About Me</h2>
-    <p>
-      I am an intermediate Full-Stack Developer and IT with Management student
-      at the State University of Zanzibar (SUZA). I enjoy building backend
-      systems, APIs, and full-stack applications that solve real-world problems.
-    </p>
-  </section>
+    <!-- Skills Section -->
+    <section class="skills" id="skills">
+      <div class="container">
+        <h2 class="section-title">
+          <i class="fas fa-code"></i> Technical Skills
+        </h2>
+        <div class="skills-grid">
+          <!-- Backend -->
+          <div class="skill-category">
+            <h3><i class="fas fa-server"></i> Backend</h3>
+            <div class="skill-card">
+              <div class="skill-icon"><i class="fab fa-python"></i></div>
+              <p>Python</p>
+            </div>
+            <div class="skill-card">
+              <div class="skill-icon"><i class="fab fa-js"></i></div>
+              <p>Node.js</p>
+            </div>
+            <div class="skill-card">
+              <div class="skill-icon"><i class="fas fa-cube"></i></div>
+              <p>Django</p>
+            </div>
+            <div class="skill-card">
+              <div class="skill-icon"><i class="fas fa-cube"></i></div>
+              <p>Flask</p>
+            </div>
+            <div class="skill-card">
+              <div class="skill-icon"><i class="fas fa-cube"></i></div>
+              <p>Express.js</p>
+            </div>
+          </div>
 
-  <!-- Skills -->
-  <section id="skills">
-    <h2 class="section-title"><i class="fas fa-code"></i> Skills</h2>
+          <!-- Frontend -->
+          <div class="skill-category">
+            <h3><i class="fas fa-palette"></i> Frontend</h3>
+            <div class="skill-card">
+              <div class="skill-icon"><i class="fab fa-react"></i></div>
+              <p>React</p>
+            </div>
+            <div class="skill-card">
+              <div class="skill-icon"><i class="fab fa-js"></i></div>
+              <p>JavaScript</p>
+            </div>
+            <div class="skill-card">
+              <div class="skill-icon"><i class="fab fa-html5"></i></div>
+              <p>HTML/CSS</p>
+            </div>
+            <div class="skill-card">
+              <div class="skill-icon"><i class="fas fa-cube"></i></div>
+              <p>Responsive Design</p>
+            </div>
+          </div>
 
-    <div class="skills-grid">
-      <div class="skill-card"><i class="fab fa-python"></i> Python</div>
-      <div class="skill-card"><i class="fab fa-js"></i> JavaScript</div>
-      <div class="skill-card"><i class="fas fa-server"></i> Django / Flask</div>
-      <div class="skill-card"><i class="fas fa-network-wired"></i> Express.js</div>
-      <div class="skill-card"><i class="fab fa-react"></i> React</div>
-      <div class="skill-card"><i class="fas fa-database"></i> MySQL / PostgreSQL</div>
-      <div class="skill-card"><i class="fas fa-leaf"></i> MongoDB</div>
-      <div class="skill-card"><i class="fab fa-docker"></i> Docker</div>
-      <div class="skill-card"><i class="fab fa-git-alt"></i> Git & GitHub</div>
-      <div class="skill-card"><i class="fas fa-lock"></i> JWT Auth</div>
-    </div>
-  </section>
+          <!-- Databases & Tools -->
+          <div class="skill-category">
+            <h3><i class="fas fa-tools"></i> Tools & Databases</h3>
+            <div class="skill-card">
+              <div class="skill-icon"><i class="fas fa-database"></i></div>
+              <p>PostgreSQL</p>
+            </div>
+            <div class="skill-card">
+              <div class="skill-icon"><i class="fas fa-database"></i></div>
+              <p>MySQL</p>
+            </div>
+            <div class="skill-card">
+              <div class="skill-icon"><i class="fas fa-leaf"></i></div>
+              <p>MongoDB</p>
+            </div>
+            <div class="skill-card">
+              <div class="skill-icon"><i class="fab fa-docker"></i></div>
+              <p>Docker</p>
+            </div>
+            <div class="skill-card">
+              <div class="skill-icon"><i class="fab fa-git-alt"></i></div>
+              <p>Git/GitHub</p>
+            </div>
+            <div class="skill-card">
+              <div class="skill-icon"><i class="fas fa-lock"></i></div>
+              <p>JWT Auth</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  <!-- Projects -->
-  <section id="projects">
-    <h2 class="section-title"><i class="fas fa-laptop-code"></i> Projects</h2>
+    <!-- Projects Section -->
+    <section class="projects" id="projects">
+      <div class="container">
+        <h2 class="section-title">
+          <i class="fas fa-laptop-code"></i> Featured Projects
+        </h2>
+        <div class="projects-grid">
+          <!-- Project 1 -->
+          <div class="project-card">
+            <div class="project-header" >
+              <i class="fas fa-robot"></i>
+            </div>
+            <h3>AI SUZA Chatbot</h3>
+            <p>
+              Health AI assistant that provides intelligent responses to
+              health-related queries using advanced AI models.
+            </p>
+            <div class="project-tech">
+              <span class="tech-tag">Flask</span>
+              <span class="tech-tag">React</span>
+              <span class="tech-tag">AI API</span>
+            </div>
+            <a
+              href="https://github.com/hafidh-099/AI-SUZA-Chartbot.git"
+              target="_blank"
+              class="project-link"
+            >
+              <i class="fab fa-github"></i> View Source
+            </a>
+          </div>
 
+          <!-- Project 2 -->
+          <div class="project-card">
+            <div class="project-header">
+              <i class="fas fa-shopping-cart"></i>
+            </div>
+            <h3>My Store</h3>
+            <p>
+              Digital e-commerce platform with server-side rendering, product
+              management, and secure payment integration.
+            </p>
+            <div class="project-tech">
+              <span class="tech-tag">Node.js</span>
+              <span class="tech-tag">Express</span>
+              <span class="tech-tag">EJS</span>
+            </div>
+            <a
+              href="https://github.com/hafidh-099/My-Store.git"
+              target="_blank"
+              class="project-link"
+            >
+              <i class="fab fa-github"></i> View Source
+            </a>
+          </div>
 
-  <div class="projects-grid">
-    <!-- Project 1 -->
-    <div class="project-card">
-      <h3>AI SUZA Chatbot</h3>
-      <p>
-        Health AI assistant that answers basic health-related questions using an AI model.
-      </p>
-      <span>Flask • React • AI API</span>
-      <br>
-      <a href="https://github.com/hafidh-099/AI-SUZA-Chartbot.git" target="_blank">
-        <i class="fab fa-github"></i> View Source
-      </a>
-    </div>
+          <!-- Project 3 -->
+          <div class="project-card">
+            <div class="project-header">
+              <i class="fas fa-book"></i>
+            </div>
+            <h3>Learning Management System</h3>
+            <p>
+              Complete online education platform for course management, student
+              enrollment, and secure authentication with role-based access.
+            </p>
+            <div class="project-tech">
+              <span class="tech-tag">Django</span>
+              <span class="tech-tag">React</span>
+              <span class="tech-tag">MySQL</span>
+            </div>
+            <a
+              href="https://github.com/hafidh-099/learning-management-system-LMS-.git"
+              target="_blank"
+              class="project-link"
+            >
+              <i class="fab fa-github"></i> View Source
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <!-- Project 2 -->
-    <div class="project-card">
-      <h3>My Store</h3>
-      <p>
-        Digital e-commerce platform with server-side rendering and product management.
-      </p>
-      <span>Node.js • Express • EJS</span>
-      <br>
-      <a href="https://github.com/hafidh-099/My-Store.git" target="_blank">
-        <i class="fab fa-github"></i> View Source
-      </a>
-    </div>
+    <!-- Contact Section -->
+    <section class="contact" id="contact">
+      <div class="container">
+        <h2 class="section-title">
+          <i class="fas fa-envelope"></i> Get In Touch
+        </h2>
+        <div class="contact-content">
+          <p class="contact-intro">
+            I'm always interested in hearing about new projects and
+            opportunities. Feel free to reach out!
+          </p>
+          <div class="contact-card">
+            <div class="contact-info">
+              <div class="contact-item">
+                <i class="fas fa-envelope"></i>
+                <div>
+                  <p class="contact-label">Email</p>
+                  <a href="mailto:hafidhmwita30@gmail.com"
+                    >hafidhmwita30@gmail.com</a
+                  >
+                </div>
+              </div>
+              <div class="contact-item">
+                <i class="fas fa-phone"></i>
+                <div>
+                  <p class="contact-label">Phone</p>
+                  <a href="tel:+255623101586">+255 623 101 586</a>
+                </div>
+              </div>
+              <div class="contact-item">
+                <i class="fas fa-location-dot"></i>
+                <div>
+                  <p class="contact-label">Location</p>
+                  <p>Zanzibar, Tanzania</p>
+                </div>
+              </div>
+            </div>
+            <div class="contact-social">
+              <p class="social-label">Follow Me</p>
+              <div class="social-icons">
+                <a
+                  href="https://github.com/hafidh-099"
+                  target="_blank"
+                  class="social-icon-large"
+                  title="GitHub"
+                >
+                  <i class="fab fa-github"></i>
+                </a>
+                <a
+                  href="mailto:hafidhmwita30@gmail.com"
+                  class="social-icon-large"
+                  title="Email"
+                >
+                  <i class="fas fa-envelope"></i>
+                </a>
+                <a href="#" class="social-icon-large" title="LinkedIn">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="#" class="social-icon-large" title="Twitter">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <!-- Project 3 -->
-    <div class="project-card">
-      <h3>Learning Management System</h3>
-      <p>
-        Online platform for selling and managing courses with authentication and roles.
-      </p>
-      <span>Django • React • MySQL</span> 
-      <br>
-      <a href="https://github.com/hafidh-099/learning-management-system-LMS-.git" target="_blank">
-        <i class="fab fa-github"></i> View Source
-      </a>
-    </div>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <p>
+          &copy; 2026 Hafidh Mwita. All rights reserved. | Built with
+          <i class="fas fa-heart"></i> using HTML, CSS & JavaScript
+        </p>
+      </div>
+    </footer>
 
-  </div>
-</section>
-
-
-</section>
-<section id="contact">
-  <h2 class="section-title">
-    <i class="fas fa-envelope"></i> Contact Me
-  </h2>
-
-  <div class="contact-card">
-    <p><i class="fas fa-envelope"></i> hafidhmwita30@gmail.com</p>
-    <p><i class="fas fa-phone"></i> +255 623 101 586</p>
-    <p><i class="fas fa-location-dot"></i> Zanzibar, Tanzania</p>
-    <p>
-      <i class="fab fa-github"></i>
-      <a href="https://github.com/hafidh-099" target="_blank">
-        github.com/hafidh-099
-      </a>
-    </p>
-  </div>
-</section>
+    <script src="script.js"></script>
+  </body>
+</html>
